fixed navbar logo no changing colors when on mobile

--- a/src/sass/blocks/_navbar.scss
+++ b/src/sass/blocks/_navbar.scss
@@ -10,7 +10,6 @@ nav {
 }
 
 .logo {
-  color: $light;
   text-decoration: underline;
   margin: 0;
 }
